Add - a bunch of styling / enhancements

--- a/src/cms-assets/my-assets/package.json
+++ b/src/cms-assets/my-assets/package.json
@@ -1,6 +1,8 @@
 {
   "name": "quote-calculator-module",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@react-pdf/renderer": "^4.3.1"
+  }
 }
-
